# detoxy

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.model  README.md  client.py  config.yaml  docker-compose.yml  pyproject.toml  todo.txt
.github/workflows/: ruff.yml
app/: .dockerignore  Dockerfile  config.py  database.py  main.py  messages.py  pyproject.toml
app/cogs/: admin.py  listener.py  moderation.py
bot/: Dockerfile  config.py  database.py  main.py  messages.py  pyproject.toml
bot/cogs/: admin.py  listener.py  moderation.py
detoxy/: __init__.py
detoxy/app/: config.py  database.py  logger.py  main.py  messages.py
detoxy/app/cogs/: admin.py  listener.py  moderation.py
detoxy/bot/: app.py  config.py  database.py  logger.py  messages.py
detoxy/bot/cogs/: listener.py  moderation.py
detoxy/ml/: client.py  config.py  datamodule.py  make_balanced_dataset.py  module.py  predictor.py  preprocess.py  server.py  trainer.py
detoxy/model/: config.py  datamodule.py  module.py  server.py  trainer.py
model/: Dockerfile  client.py  config.py  main.py  module.py  pyproject.toml  server.py  trainer.py  utils.py
model/src/model/: client.py  config.py  datamodule.py  module.py  preprocess.py  server.py  trainer.py
notebooks/: colab_compare_datasets.ipynb  colab_compare_models.ipynb  colab_tuning.ipynb
src/nm/: __init__.py
src/toxy_bot/: __init__.py
src/toxy_bot/ml/data/: convert.py  download.py  pipeline.py  preprocess.py
src/toxy_bot/ml/model/: bert_model.py  classifier.py  utils.py
toxy_bot/ml/: client.py  config.py  datamodule.py  dataset.py  module.py  server.py  trainer.py  utils.py
