[project]
name = "detoxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["model", "app"]

[tool.uv.workspace]
members = [
    "model",
    "app",
]

[tool.uv.sources]
model = { workspace = true }
app = { workspace = true } 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.scripts]
serve = "python -m model.src.model.server"