[project]
name = "nm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cozmo", email = "107803920+Cozmo18@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nm = "nm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/model",
    "packages/bot",
]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM",
  "ERA",
  "D",
  "FIX",
  "S",
  "ANN401",
  "ISC001",
  "T201",
  "TD003",
  "PLR2004",
]

[tool.ty.environment]
python-version = "3.12"
