[project]
name = "nm"
version = "0.1.0"
description = "No More - AI powered social moderation tools."
readme = "README.md"
authors = [
    { name = "dbozbay", email = "107803920+dbozbay@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = ["bot", "model"]

[project.scripts]
nm = "nm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bot = { workspace = true }
model = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py312"

[tool.ty.environment]
python = "./.venv"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM",
  "ERA",
  "D",
  "FIX",
  "S",
  "ANN401",
  "ISC001",
  "T201",
  "TD003",
  "PLR2004",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a11",
]
