[project]
name = "detoxy-app"
version = "0.9.0"
description = "Discord bot application for Detoxy"
requires-python = ">=3.11"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detoxy_app"]

[tool.ruff]
line-length = 88
target-version = "py311" 
