[project]
name = "detoxy-model"
version = "0.9.0"
description = "Toxic message classification model for Detoxy Discord bot"
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.2",
    "numpy<2",
    "transformers<4.51.0",
    "huggingface_hub[hf_xet]>=0.31",
    "litserve>=0.2.10",
    "lightning>=2.5.1.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detoxy_model"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[tool.ruff]
line-length = 88
target-version = "py311" 