[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cozmo", email = "107803920+Cozmo18@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch<2.3",
    "numpy<2",
    "lightning>=2.5.1.post0",
    "litserve>=0.2.12",
    "transformers>=4.52.4",
    "dotenv>=0.9.9",
]

[project.scripts]
model = "model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]